Bug 152411 - Gtk-CRITICAL: assertion 'GTK_IS_TREE_MODEL (tree_model)' failed when switching element lists in Math
Summary: Gtk-CRITICAL: assertion 'GTK_IS_TREE_MODEL (tree_model)' failed when switchin...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
7.4.3.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0 target:7.4.4 target:7.6.0
Keywords: regression
Depends on:
Blocks: GTK3 Elements-Pane
  Show dependency treegraph
 
Reported: 2022-12-07 12:12 UTC by Stéphane Guillou (stragu)
Modified: 2023-03-10 10:49 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stéphane Guillou (stragu) 2022-12-07 12:12:36 UTC
Steps to reproduce:

1. Launch Math from command line, with e.g. libreoffice7.4 --math
2. Switch element lists from either the sidebar (all versions) or the Elements panel (up to version 7.4): assertion 'GTK_IS_TREE_MODEL (tree_model)' failure message shown in command line.
3. Insert an element into the formula
4. Change element list again: assertion failed again

Full Gtk-CRITICAL message:

(soffice:25781): Gtk-CRITICAL **: 12:34:11.070: gtk_tree_model_get_iter: assertion 'GTK_IS_TREE_MODEL (tree_model)' failed

Note that the assertion failure does not repeat unless an element has been inserted from the panel into the formula.

Versions:

Version: 7.4.3.2 / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: da3dd48eaf9086f8ab28d6a6655f9a638e51433a
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Not reproduced in:

Version: 7.3.7.2 / LibreOffice Community
Build ID: e114eadc50a9ff8d8c8a0567d6da8f454beeb84f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

-> Regression.

Not reproduced in:

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: da3dd48eaf9086f8ab28d6a6655f9a638e51433a
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

-> GTK VCL-specific.
Comment 1 Caolán McNamara 2022-12-07 13:19:16 UTC
looks like its a gtk accessibility callback that triggers this
Comment 2 Commit Notification 2022-12-07 14:49:44 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e58ad604df2022450bec0d83d496037c799ae969

Resolves: tdf#152411 clear before freeze to let gtk a11y drop reference

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Caolán McNamara 2022-12-07 14:50:49 UTC
a quirk of GtkIconView I guess, done in trunk, backport to 7-4 in gerrit
Comment 4 Stéphane Guillou (stragu) 2022-12-08 11:16:35 UTC
Verified fix in:

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: ad085990b8073a122ac5222e5220f8f1d6826dcf
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks Caolán!
Comment 5 Commit Notification 2022-12-08 12:21:12 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/4e8331b77a2dcad2b10d3ca5b788711ea4e83a1b

Resolves: tdf#152411 clear before freeze to let gtk a11y drop reference

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-03-10 10:49:44 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/76fcddcd955ba26655dcfc0d6261f4c00be375fe

Revert "Resolves: tdf#152411 clear before freeze to let gtk a11y ...

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.