Resolves: tdf#152411 clear before freeze to let gtk a11y drop reference

Change-Id: I2c0f852a0432e7319644b0ea11533b6d153b4ac7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143718
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>