starmath/source/ElementsDockingWindow.cxx
@@ -554,8 +554,8 @@ void SmElementsControl::setElementSetId(TranslateId pSetId)
 
 void SmElementsControl::addElements(const TranslateId& rCategory)
 {
+    mpIconView->clear(); // tdf#152411 clear before freeze to let gtk a11y drop reference
     mpIconView->freeze();
-    mpIconView->clear();
     mpIconView->set_item_width(0);
     maItemDatas.clear();
 
